--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-image": "^2.0.4",
     "@rollup/plugin-node-resolve": "^6.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
     "caniuse-lite": "^1.0.30001228",
     "cssnano": "^5.1.13",
     "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
+    "prettier": "^2.8.0",
+    "prettier-plugin-svelte": "^2.8.1",
     "rollup": "^1.32.1",
     "rollup-plugin-html-bundle": "0.0.3",
     "rollup-plugin-livereload": "^1.1.0",
