--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "sirv public"
   },
   "devDependencies": {
-    "@figma/plugin-typings": "^1.51.0",
+    "@figma/plugin-typings": "^1.58.0",
+    "@figma/widget-typings": "^1.5.0",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-image": "^2.0.4",
     "@rollup/plugin-node-resolve": "^6.1.0",
